--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,7 +134,8 @@
                     android:layout_width="@dimen/layout_row_height"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:layout_marginTop="8dp"></EditText>
+                    android:layout_marginTop="8dp"
+                    android:inputType="number"></EditText>
 
                 <TextView
                     android:id="@+id/number_of_symbols_text"
@@ -143,6 +144,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:freezesText="true"
                     android:text="символов" />
 
                 <Button
@@ -167,7 +169,8 @@
         android:id="@+id/ready_password_text_view"
         android:layout_width="@dimen/ready_password_text_view_width"
         android:layout_height="@dimen/pswd_strength_progress_bar_height"
-        android:text="@string/ready_password" />
+        android:text="@string/ready_password"
+        android:freezesText="true"/>
 
     <ImageView
         android:id="@+id/pswd_strength_progress_bar"
