--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,37 +127,45 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/num_of_symbols_in_pswd"
-                    android:layout_width="@dimen/layout_row_height"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:layout_marginTop="8dp"
-                    android:inputType="number"></EditText>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/number_of_symbols_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/layout_row_height"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:freezesText="true"
-                    android:text="символов" />
+                    <EditText
+                        android:id="@+id/num_of_symbols_in_pswd"
+                        android:layout_width="@dimen/layout_row_height"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:inputType="number"
+                        android:textSize="14sp"></EditText>
 
+                    <TextView
+                        android:id="@+id/number_of_symbols_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/layout_row_height"
+                        android:layout_marginTop="8dp"
+                        android:layout_weight="1"
+                        android:freezesText="true"
+                        android:gravity="center"
+                        android:text="символов" />
+
+                </LinearLayout>
                 <Button
                     android:id="@+id/password_generate_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/password_generate_button_height"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="4dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="4dp"
                     android:layout_marginBottom="8dp"
                     android:text="@string/password_generation_generate"
                     android:textSize="8sp" />
+
             </LinearLayout>
+
         </TableRow>
 
         <TableRow
